@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.28 2011/11/26 20:43:55 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.29 2011/11/27 09:17:35 mgorny Exp $
+
+  27 Nov 2011; Michał Górny <mgorny@gentoo.org> autotools-utils.eclass:
+  Denote that autotools-utils must not be mixed with econf/emake.
 
   26 Nov 2011; Michał Górny <mgorny@gentoo.org> autotools-utils.eclass:
   Remove implicit IUSE=debug deprecation warning.
